--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ts-node src/server.ts"
+    "start": "nodemon dist/server.js"
   },
   "keywords": [],
   "author": "",
